[tool.poetry]
name = "nfc-check"
version = "0.1.0"
description = "Web applicathon for NFC authenticity check"
authors = ["Titusz <tp@py7.de>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/bitcoin-ring/nfc-check"
packages = [{include = "nfc_check"}]


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
poethepoet = "^0.19.0"


[tool.poe.tasks]
format = { cmd = "poetry run black .", help = "Code style formating with black" }
lf = { cmd = "poetry run python -m tests.lf", help = "Convert line endings to lf"}
test = { cmd = "poetry run pytest", help = "Run tests" }
all = ["format", "lf", "test"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
